Refactor CSS styles and add new components

--- a/src/Components/BanList.css
+++ b/src/Components/BanList.css
@@ -1,25 +1,25 @@
 /* BanList.css */
 #ban-list {
-    border: 1px solid #ffb3b3;
-    border-radius: 10px;
-    padding: 20px;
-    background-color: #ffe6e6;
-  }
-  
-  #ban-list h3 {
-    color: #ff4d4d;
-    margin-bottom: 10px;
-  }
-  
-  #ban-list ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  #ban-list ul li {
-    background-color: #ffcccc;
-    padding: 5px 10px;
-    border-radius: 5px;
-    margin-bottom: 5px;
-  }
-  
+  border: 1px solid #ffb3b3;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #ffe6e6;
+  margin-top: 20px;
+}
+
+#ban-list h3 {
+  color: #ff4d4d;
+  margin-bottom: 10px;
+}
+
+#ban-list ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+#ban-list ul li {
+  background-color: #ffcccc;
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
