--- a/src/Components/Display.css
+++ b/src/Components/Display.css
@@ -1,44 +1,45 @@
 /* Display.css */
 #display {
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 20px;
-    background-color: #f9f9f9;
-  }
-  
-  #display img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0 auto 20px auto;
-    border-radius: 10px;
-  }
-  
-  #display p {
-    margin-bottom: 10px;
-    color: #333;
-    font-weight: bold;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  ul li {
-    display: inline-block;
-    margin: 5px;
-  }
-  
-  ul li span {
-    background-color: #ffedcc;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 14px;
-  }
-  
-  ul li span:hover {
-    background-color: #ffd699;
-  }
-  
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 30px;
+  background-color: #f9f9f9;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#display img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto 20px auto;
+  border-radius: 10px;
+}
+
+#display p {
+  margin-bottom: 10px;
+  color: #333;
+  font-weight: bold;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  display: inline-block;
+  margin: 5px;
+}
+
+ul li span {
+  background-color: #ffedcc;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+ul li span:hover {
+  background-color: #ffd699;
+}
